--- a/q21.html
+++ b/q21.html
@@ -10,6 +10,6 @@
 <h1>Political Ideology</h1>
 <p class="question" id="question-text">Should the workers directly own the means of production or should the state be in control of them?</p>
 <button class="button" onclick="location.href='libsoc.html';" style="background-color: #ff0000"; id="Answer8">Workers</button> <br>
-<button class="button" onclick="location.href='statesoc.html';" style="background-color: #852013"; id="Answer9">State</button> <br>
+<button class="button" onclick="location.href='statsoc.html';" style="background-color: #852013"; id="Answer9">State</button> <br>
 <button class="small_button" onclick="location.href='q20.html';" id="back_button">Back</button>
 </body>
