--- a/q15.html
+++ b/q15.html
@@ -10,7 +10,7 @@
 <h1>Political Ideology</h1>
 <p class="question" id="question-text">Should there be a strong authoritarian state to protect the working class from foreign nations?</p>
 <button class="button" onclick="location.href='tito.html';" style="background-color: #1b5e20"; id="Answer1">Yes</button> <br>
-<button class="button" onclick="location.href='statmarksoc.html';" style="background-color: #b71c1c"; id="Answer2">No</button> <br>
+<button class="button" onclick="location.href='marksoc.html';" style="background-color: #b71c1c"; id="Answer2">No</button> <br>
 <button class="button" onclick="location.href='mutualist.html';" style="background-color: #000000"; id="Answer3">The state shouldn't exist</button> <br>
 <button class="small_button" onclick="location.href='q2.html';" id="back_button">Back</button>
 </body>
