Fixed the articles in resutt pages

--- a/angeo.html
+++ b/angeo.html
@@ -11,7 +11,7 @@
 <hr>
 
 <h1>Results</h1>
-<h2 style="text-align:center;">You're an Geoanarchist</h2>
+<h2 style="text-align:center;">You're a Geoanarchist</h2>
 <h2> <span class="weight-300"></span></h2>
 <img id="angeo_flag" src="flags/angeo_flag.png" />
 </body>
