--- a/libsoc.html
+++ b/libsoc.html
@@ -11,7 +11,7 @@
 <hr>
 
 <h1>Results</h1>
-<h2 style="text-align:center;">You're an Libertarian Socialist</h2>
+<h2 style="text-align:center;">You're a Libertarian Socialist</h2>
 <h2> <span class="weight-300"></span></h2>
 <img id="libsoc_flag" src="flags/libsoc_flag.png" />
 </body>
