--- a/minarch.html
+++ b/minarch.html
@@ -11,7 +11,7 @@
 <hr>
 
 <h1>Results</h1>
-<h2 style="text-align:center;">You're an Minarchist</h2>
+<h2 style="text-align:center;">You're a Minarchist</h2>
 <h2> <span class="weight-300"></span></h2>
 <img id="minarch_flag" src="flags/minarch_flag.png" />
 </body>
