--- a/ml.html
+++ b/ml.html
@@ -11,7 +11,7 @@
 <hr>
 
 <h1>Results</h1>
-<h2 style="text-align:center;">You're an Marxist-Leninist</h2>
+<h2 style="text-align:center;">You're a Marxist-Leninist</h2>
 <h2> <span class="weight-300"></span></h2>
 <img id="ml_flag" src="flags/ml_flag.png" />
 </body>
