--- a/nazi.html
+++ b/nazi.html
@@ -11,7 +11,7 @@
 <hr>
 
 <h1>Results</h1>
-<h2 style="text-align:center;">You're an National Socialist</h2>
+<h2 style="text-align:center;">You're a National Socialist</h2>
 <h2> <span class="weight-300"></span></h2>
 <img id="nazi_flag" src="flags/nazi_flag.png" />
 </body>
