--- a/neolib.html
+++ b/neolib.html
@@ -11,7 +11,7 @@
 <hr>
 
 <h1>Results</h1>
-<h2 style="text-align:center;">You're an Neoliberal</h2>
+<h2 style="text-align:center;">You're a Neoliberal</h2>
 <h2> <span class="weight-300"></span></h2>
 <img id="neolib_flag" src="flags/neolib_flag.png" />
 </body>
