--- a/socdem.html
+++ b/socdem.html
@@ -11,7 +11,7 @@
 <hr>
 
 <h1>Results</h1>
-<h2 style="text-align:center;">You're an Social Democrat</h2>
+<h2 style="text-align:center;">You're a Social Democrat</h2>
 <h2> <span class="weight-300"></span></h2>
 <img id="socdem_flag" src="flags/socdem_flag.png" />
 </body>
