--- a/socgeo.html
+++ b/socgeo.html
@@ -11,7 +11,7 @@
 <hr>
 
 <h1>Results</h1>
-<h2 style="text-align:center;">You're an Social Georgist</h2>
+<h2 style="text-align:center;">You're a Social Georgist</h2>
 <h2> <span class="weight-300"></span></h2>
 <img id="socgeo_flag" src="flags/socgeo_flag.png" />
 </body>
