--- a/bhl.html
+++ b/bhl.html
@@ -11,7 +11,7 @@
 <hr>
 
 <h1>Results</h1>
-<h2 style="text-align:center;">You're an Bleeding-Heart Libertarian</h2>
+<h2 style="text-align:center;">You're a Bleeding-Heart Libertarian</h2>
 <h2> <span class="weight-300"></span></h2>
 <img id="bhl_flag" src="flags/bhl_flag.png" />
 </body>
