--- a/classgeo.html
+++ b/classgeo.html
@@ -11,7 +11,7 @@
 <hr>
 
 <h1>Results</h1>
-<h2 style="text-align:center;">You're an Georgist</h2>
+<h2 style="text-align:center;">You're a Georgist</h2>
 <h2> <span class="weight-300"></span></h2>
 <img id="classgeo_flag" src="flags/classgeo_flag.png" />
 </body>
