--- a/demsoc.html
+++ b/demsoc.html
@@ -11,7 +11,7 @@
 <hr>
 
 <h1>Results</h1>
-<h2 style="text-align:center;">You're an Democratic Socialist</h2>
+<h2 style="text-align:center;">You're a Democratic Socialist</h2>
 <h2> <span class="weight-300"></span></h2>
 <img id="demsoc_flag" src="flags/demsoc_flag.png" />
 </body>
