--- a/geolib.html
+++ b/geolib.html
@@ -11,7 +11,7 @@
 <hr>
 
 <h1>Results</h1>
-<h2 style="text-align:center;">You're an Geolibertarian</h2>
+<h2 style="text-align:center;">You're a Geolibertarian</h2>
 <h2> <span class="weight-300"></span></h2>
 <img id="geolib_flag" src="flags/geolib_flag.png" />
 </body>
