--- a/libmarx.html
+++ b/libmarx.html
@@ -11,7 +11,7 @@
 <hr>
 
 <h1>Results</h1>
-<h2 style="text-align:center;">You're an Libertarian Marxist</h2>
+<h2 style="text-align:center;">You're a Libertarian Marxist</h2>
 <h2> <span class="weight-300"></span></h2>
 <img id="libmarx_flag" src="flags/libmarx_flag.png" />
 </body>
