--- a/marksoc.html
+++ b/marksoc.html
@@ -11,7 +11,7 @@
 <hr>
 
 <h1>Results</h1>
-<h2 style="text-align:center;">You're an Market Socialist</h2>
+<h2 style="text-align:center;">You're a Market Socialist</h2>
 <h2> <span class="weight-300"></span></h2>
 <img id="marksoc_flag" src="flags/marksoc_flag.png" />
 </body>
