--- a/nazcap.html
+++ b/nazcap.html
@@ -11,7 +11,7 @@
 <hr>
 
 <h1>Results</h1>
-<h2 style="text-align:center;">You're an National Capitalist</h2>
+<h2 style="text-align:center;">You're a National Capitalist</h2>
 <h2> <span class="weight-300"></span></h2>
 <img id="nazcap_flag" src="flags/nazcap_flag.png" />
 </body>
