--- a/neocon.html
+++ b/neocon.html
@@ -11,7 +11,7 @@
 <hr>
 
 <h1>Results</h1>
-<h2 style="text-align:center;">You're an Neoconservative</h2>
+<h2 style="text-align:center;">You're a Neoconservative</h2>
 <h2> <span class="weight-300"></span></h2>
 <img id="neocon_flag" src="flags/neocon_flag.png" />
 </body>
