--- a/paleocon.html
+++ b/paleocon.html
@@ -11,7 +11,7 @@
 <hr>
 
 <h1>Results</h1>
-<h2 style="text-align:center;">You're an Paleoconservative</h2>
+<h2 style="text-align:center;">You're a Paleoconservative</h2>
 <h2> <span class="weight-300"></span></h2>
 <img id="paleocon_flag" src="flags/paleocon_flag.png" />
 </body>
