--- a/statsoc.html
+++ b/statsoc.html
@@ -11,7 +11,7 @@
 <hr>
 
 <h1>Results</h1>
-<h2 style="text-align:center;">You're an State Socialist</h2>
+<h2 style="text-align:center;">You're a State Socialist</h2>
 <h2> <span class="weight-300"></span></h2>
 <img id="statsoc_flag" src="flags/statsoc_flag.png" />
 </body>
