--- a/tito.html
+++ b/tito.html
@@ -11,7 +11,7 @@
 <hr>
 
 <h1>Results</h1>
-<h2 style="text-align:center;">You're an Titoist</h2>
+<h2 style="text-align:center;">You're a Titoist</h2>
 <h2> <span class="weight-300"></span></h2>
 <img id="tito_flag" src="flags/tito_flag.png" />
 </body>
