Uploaded beta of version 3.0
Version 3.0

--- a/quiz.html
+++ b/quiz.html
@@ -25,7 +25,10 @@
 <button class="button" onclick="next_question_2()" style="background-color: #852013"; id="Answer10">State</button> <br>
 <button class="button" onclick="next_question_1()" style="background-color: #c210ad"; id="Answer11">Electoralism</button> <br>
 <button class="button" onclick="next_question_2()" style="background-color: #ff0000"; id="Answer12">Revolution</button> <br>
-
+<button class="button" onclick="next_question_1()" style="background-color: #ff0000"; id="Answer13">Welfare</button> <br>
+<button class="button" onclick="next_question_2()" style="background-color: #f5dd00"; id="Answer14">Not needed</button> <br>
+<button class="button" onclick="next_question_1()" style="background-color: #000000"; id="Answer15">Dasein</button> <br>
+<button class="button" onclick="next_question_2()" style="background-color: #cd0000"; id="Answer16">Class/Nation</button> <br>
 <!-- JavaScript for the test itself -->
 <script>
     var qn = 0; // Question number
@@ -46,6 +49,10 @@
 			document.getElementById("Answer10").style.display = 'none';
 			document.getElementById("Answer11").style.display = 'none';
 			document.getElementById("Answer12").style.display = 'none';
+			document.getElementById("Answer13").style.display = 'none';
+			document.getElementById("Answer14").style.display = 'none';
+			document.getElementById("Answer15").style.display = 'none';
+			document.getElementById("Answer16").style.display = 'none';
 		}if (qs == 2){ // Answer 1 (Yes), Answer 2 (No) and Answer 3 (The state shouldn't exist) are displayed
 			document.getElementById("Answer1").style.display = 'block';
 			document.getElementById("Answer2").style.display = 'block';
@@ -59,6 +66,10 @@
 			document.getElementById("Answer10").style.display = 'none';
 			document.getElementById("Answer11").style.display = 'none';
 			document.getElementById("Answer12").style.display = 'none';
+			document.getElementById("Answer13").style.display = 'none';
+			document.getElementById("Answer14").style.display = 'none';
+			document.getElementById("Answer15").style.display = 'none';
+			document.getElementById("Answer16").style.display = 'none';
 		}if (qs == 3){ // Answer 4 (Conditional) and Answer 5 (Unconditional) are displayed
 			document.getElementById("Answer1").style.display = 'none';
 			document.getElementById("Answer2").style.display = 'none';
@@ -72,6 +83,10 @@
 			document.getElementById("Answer10").style.display = 'none';
 			document.getElementById("Answer11").style.display = 'none';
 			document.getElementById("Answer12").style.display = 'none';
+			document.getElementById("Answer13").style.display = 'none';
+			document.getElementById("Answer14").style.display = 'none';
+			document.getElementById("Answer15").style.display = 'none';
+			document.getElementById("Answer16").style.display = 'none';
 		}if (qs == 4){ // Answer 6 (Capitalism) and Answer 7 (Corporatism) are displayed
 			document.getElementById("Answer1").style.display = 'none';
 			document.getElementById("Answer2").style.display = 'none';
@@ -85,6 +100,10 @@
 			document.getElementById("Answer10").style.display = 'none';
 			document.getElementById("Answer11").style.display = 'none';
 			document.getElementById("Answer12").style.display = 'none';
+			document.getElementById("Answer13").style.display = 'none';
+			document.getElementById("Answer14").style.display = 'none';
+			document.getElementById("Answer15").style.display = 'none';
+			document.getElementById("Answer16").style.display = 'none';
 		}if (qs == 5){ // Answer 8 (Workers) and Answer 10 (State) are displayed
 			document.getElementById("Answer1").style.display = 'none';
 			document.getElementById("Answer2").style.display = 'none';
@@ -98,6 +117,10 @@
 			document.getElementById("Answer10").style.display = 'block';
 			document.getElementById("Answer11").style.display = 'none';
 			document.getElementById("Answer12").style.display = 'none';
+			document.getElementById("Answer13").style.display = 'none';
+			document.getElementById("Answer14").style.display = 'none';
+			document.getElementById("Answer15").style.display = 'none';
+			document.getElementById("Answer16").style.display = 'none';
 		}if (qs == 6){ // Answer 9 (Unions) and Answer 10 (State) are displayed
 			document.getElementById("Answer1").style.display = 'none';
 			document.getElementById("Answer2").style.display = 'none';
@@ -111,6 +134,10 @@
 			document.getElementById("Answer10").style.display = 'block';
 			document.getElementById("Answer11").style.display = 'none';
 			document.getElementById("Answer12").style.display = 'none';
+			document.getElementById("Answer13").style.display = 'none';
+			document.getElementById("Answer14").style.display = 'none';
+			document.getElementById("Answer15").style.display = 'none';
+			document.getElementById("Answer16").style.display = 'none';
 		}if (qs == 7){// Answer 11 (Electoralism) and Answer 12 (Revolution) are displayed
 			document.getElementById("Answer1").style.display = 'none';
 			document.getElementById("Answer2").style.display = 'none';
@@ -124,6 +151,44 @@
 			document.getElementById("Answer10").style.display = 'none';
 			document.getElementById("Answer11").style.display = 'block';
 			document.getElementById("Answer12").style.display = 'block';
+			document.getElementById("Answer13").style.display = 'none';
+			document.getElementById("Answer14").style.display = 'none';
+			document.getElementById("Answer15").style.display = 'none';
+			document.getElementById("Answer16").style.display = 'none';
+		}if (qs == 8){// Answer 13 (Welfare) and Answer 14 (Not needed) are displayed
+			document.getElementById("Answer1").style.display = 'none';
+			document.getElementById("Answer2").style.display = 'none';
+			document.getElementById("Answer3").style.display = 'none';
+			document.getElementById("Answer4").style.display = 'none';
+			document.getElementById("Answer5").style.display = 'none';
+			document.getElementById("Answer6").style.display = 'none';
+			document.getElementById("Answer7").style.display = 'none';
+			document.getElementById("Answer8").style.display = 'none';
+			document.getElementById("Answer9").style.display = 'none';
+			document.getElementById("Answer10").style.display = 'none';
+			document.getElementById("Answer11").style.display = 'none';
+			document.getElementById("Answer12").style.display = 'none';
+			document.getElementById("Answer13").style.display = 'block';
+			document.getElementById("Answer14").style.display = 'block';
+			document.getElementById("Answer15").style.display = 'none';
+			document.getElementById("Answer16").style.display = 'none';
+		}if (qs == 9){// Answer 15 (Dasein) and Answer 16 (Class/Nation) are displayed
+			document.getElementById("Answer1").style.display = 'none';
+			document.getElementById("Answer2").style.display = 'none';
+			document.getElementById("Answer3").style.display = 'none';
+			document.getElementById("Answer4").style.display = 'none';
+			document.getElementById("Answer5").style.display = 'none';
+			document.getElementById("Answer6").style.display = 'none';
+			document.getElementById("Answer7").style.display = 'none';
+			document.getElementById("Answer8").style.display = 'none';
+			document.getElementById("Answer9").style.display = 'none';
+			document.getElementById("Answer10").style.display = 'none';
+			document.getElementById("Answer11").style.display = 'none';
+			document.getElementById("Answer12").style.display = 'none';
+			document.getElementById("Answer13").style.display = 'none';
+			document.getElementById("Answer14").style.display = 'none';
+			document.getElementById("Answer15").style.display = 'block';
+			document.getElementById("Answer16").style.display = 'block';
 		}
     }
     function next_question_1() { //Returns the result of the first answer
