--- a/quiz.html
+++ b/quiz.html
@@ -30,6 +30,6 @@
 		<button class="qbutton" onclick="next_question(1)" style="background-color: #cd0000;" id="Answer16">Class/Nation</button><br>
 	</div>
 
-	<script type="application/javascript" src="scripts/json/questions.js"></script>
-	<script type="application/javascript" src="scripts/quiz.js"></script>
+	<script type="application/javascript" src="questions.js"></script>
+	<script type="application/javascript" src="quiz.js"></script>
 </body>
