--- a/results.html
+++ b/results.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-	<script type="application/javascript" src="ideologies.js">
 	</script>
 	<h1>Ideosorter</h1>
 	<hr>
@@ -16,6 +15,7 @@
 	<h2> <span class="weight-300"></span></h2>
 	<img src="" id="flag">
 	<p class="description" id="desc-ideology"></p>
+	<script type="application/javascript" src="scripts/json/ideologies.js"></script>
 	<script>
 
 		(function getUrl() {
