--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:400,700" rel="stylesheet">
 <link href='style.css' rel='stylesheet' type='text/css'>
 <title>Ideosorter</title>
-<link rel="icon" type="x-icon" href="icon.png">
-<link rel="shortcut icon" type="x-icon" href="icon.png">
+<link rel="icon" type="x-icon" href="icon.svg">
+<link rel="shortcut icon" type="x-icon" href="icon.svg">
 <meta charset="utf-8">
 </head>
 <body>
