--- a/instructions.html
+++ b/instructions.html
@@ -1,29 +1,35 @@
-<html lang="en-US">
+<html>
+
 <head>
-<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:400,700" rel="stylesheet">
-<link href='style.css' rel='stylesheet' type='text/css'>
-<link rel="icon" type="x-icon" href="icon.png">
-<link rel="shortcut icon" type="x-icon" href="icon.png">
-<meta charset="utf-8">
-<title>Ideosorter</title>
-<meta property="og:ttl" content="600">
-<meta property="og:site_name" content="Ideosorter.github.io">
-<meta property="og:title" content="Ideosorter">
-<meta property="og:type" content="website">
-<meta property="og:description" content="Ideosorter is a flowchart based interactive political quiz.">
-<meta property="og:url" content="https://ideosorter.github.io/">
-<meta property="og:image" content="https://ideosorter.github.io/embedicon.png">
-<meta property="og:image:width" content="512">
-<meta property="og:image:height" content="512">
-<meta name="theme-color" content="#000000" data-react-helmet="true">
-<meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:400,700" rel="stylesheet">
+    <link href='style.css' rel='stylesheet' type='text/css'>
+    <link rel="icon" type="x-icon" href="icon.png">
+    <link rel="shortcut icon" type="x-icon" href="icon.png">
+    <meta charset="utf-8">
+    <title>Ideosorter</title>
+    <meta property="og:ttl" content="600">
+    <meta property="og:site_name" content="Ideosorter.github.io">
+    <meta property="og:title" content="Ideosorter">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Ideosorter is a flowchart based interactive political quiz.">
+    <meta property="og:url" content="https://ideosorter.github.io/">
+    <meta property="og:image" content="https://ideosorter.github.io/embedicon.png">
+    <meta property="og:image:width" content="512">
+    <meta property="og:image:height" content="512">
+    <meta name="theme-color" content="#000000" data-react-helmet="true">
+    <meta charset="utf-8">
 </head>
+
 <body>
-<h1>Ideosorter</h1>
-<hr>
-<h2 style="text-align:center;">Instructions</h2>
-<p class="question">You will be presented with a series of questions. For each one, click the button with your opinion on it.</p>
-<button class="button" onclick="location.href='quiz.html';" style="background-color: #2196f3;">Got it!</button> <br>
-<button class="button" onclick="location.href='index.html';" style="background-color: #f44336;">Wait, nevermind!</button> <br>
+    <h1 id="title"></h1>
+    <hr>
+    <h2 id="instructions_title" style="text-align:center;"></h2>
+    <p id="instructions_text" class="question"></p>
+    <button id="instructions_gotitbutton" class="button" onclick="location.href='quiz.html';" style="background-color: #2196f3;"></button> <br>
+    <button id="instructions_nevermind" class="button" onclick="location.href='index.html';" style="background-color: #f44336;"></button> <br>
+
+    <script type="application/javascript" src="scripts/json/loc.js"></script>
+    <script type="application/javascript" src="scripts/locpraxis.js"></script>
 </body>
+
 </html>
