--- a/quiz.html
+++ b/quiz.html
@@ -1,29 +1,33 @@
-<html lang="en-US">
+<html>
+
 <head>
-<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:400,700" rel="stylesheet">
-<link href='style.css' rel='stylesheet' type='text/css'>
-<link rel="icon" type="x-icon" href="icon.png">
-<link rel="shortcut icon" type="x-icon" href="icon.png">
-<meta charset="utf-8">
-<title>Ideosorter</title>
-<meta property="og:ttl" content="600">
-<meta property="og:site_name" content="Ideosorter.github.io">
-<meta property="og:title" content="Ideosorter">
-<meta property="og:type" content="website">
-<meta property="og:description" content="Ideosorter is a flowchart based interactive political quiz.">
-<meta property="og:url" content="https://ideosorter.github.io/">
-<meta property="og:image" content="https://ideosorter.github.io/embedicon.png">
-<meta property="og:image:width" content="512">
-<meta property="og:image:height" content="512">
-<meta name="theme-color" content="#000000" data-react-helmet="true">
-<meta charset="utf-8">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:400,700" rel="stylesheet">
+	<link href='style.css' rel='stylesheet' type='text/css'>
+	<link rel="icon" type="x-icon" href="icon.png">
+	<link rel="shortcut icon" type="x-icon" href="icon.png">
+	<meta charset="utf-8">
+	<title>Ideosorter</title>
+	<meta property="og:ttl" content="600">
+	<meta property="og:site_name" content="Ideosorter.github.io">
+	<meta property="og:title" content="Ideosorter">
+	<meta property="og:type" content="website">
+	<meta property="og:description" content="Ideosorter is a flowchart based interactive political quiz.">
+	<meta property="og:url" content="https://ideosorter.github.io/">
+	<meta property="og:image" content="https://ideosorter.github.io/embedicon.png">
+	<meta property="og:image:width" content="512">
+	<meta property="og:image:height" content="512">
+	<meta name="theme-color" content="#000000" data-react-helmet="true">
+	<meta charset="utf-8">
 </head>
+
 <body>
-	<h1>Ideosorter</h1>
+	<h1 id="title"></h1>
 	<hr>
 	<p class="question" id="question-text"></p>
 	<div id="buttonholder"></div>
 
+	<script type="application/javascript" src="scripts/json/loc.js"></script>
+	<script type="application/javascript" src="scripts/locpraxis.js"></script>
 	<script type="application/javascript" src="scripts/json/buttons.js"></script>
 	<script type="application/javascript" src="scripts/json/questions.js"></script>
 	<script type="application/javascript" src="scripts/quiz.js"></script>
