--- a/instructions.html
+++ b/instructions.html
@@ -3,7 +3,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:400,700" rel="stylesheet">
     <link href='style.css' rel='stylesheet' type='text/css'>
-    <link rel="icon" type="x-icon" href="icon.svg">
+    <link rel="icon" type="image/svg+xml" href="icon.svg">
     <link rel="shortcut icon" type="x-icon" href="icon.png">
     <meta charset="utf-8">
     <title>Ideosorter</title>
