Simplified async http requests

--- a/quiz.html
+++ b/quiz.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <h1 id="quiz_title"></h1>
-        <div id="question"></div>
+        <div id="question">Loading...</div>
         <div id="buttonholder"></div>
         <button id="back_button" onclick="prev_question()">
     </body>
