Prepare all pages to have a common initialization

--- a/credits.html
+++ b/credits.html
@@ -22,5 +22,5 @@
         <div id="credits_body"></div>
         <button id="returnbutton" onclick="history.back();">Return</button>
     </body>
-    <script src="scripts/credits.js"></script>
+    <script src="scripts/common.js" type="module"></script>
 </html>
