--- a/quiz.html
+++ b/quiz.html
@@ -23,5 +23,5 @@
         <div id="buttonholder"></div>
         <button id="back_button" onclick="prev_question()">
     </body>
-    <script src="scripts/quiz.js"></script>
+    <script src="scripts/common.js" type="module"></script>
 </html>
