--- a/results.html
+++ b/results.html
@@ -25,5 +25,5 @@
         <button id="indexbutton"></button>
         <button id="creditsbutton" onclick="location.href = 'credits.html';"></button>
     </body>
-    <script src="scripts/results.js"></script>
+    <script src="scripts/common.js" type="module"></script>
 </html>
