--- a/tree.html
+++ b/tree.html
@@ -22,5 +22,5 @@
         <p id="tree_info"></p>
         <div id="tree">Loading...</div>
     </body>
-    <script src="scripts/tree.js"></script>
+    <script src="scripts/common.js" type="module"></script>
 </html>
