Finish new i18n archtecture, migrating the quiz page.
issue #46

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </a>
         <select id="langDropdown"></select>
         <noscript>This test requires JavaScript enabled to run.</noscript>
-        <h1 id="title"></h1>
-        <div id="text_body"></div>
+        <h1 id="title">...</h1>
+        <div id="text_body">...</div>
         <button id="startbutton"></button>
         <h2 id="contacts"></h2>
         <div id="contacts_info"></div>
