--- a/results.html
+++ b/results.html
@@ -18,8 +18,8 @@
         <meta name="theme-color" content="#222222" data-react-helmet="true">
     </head>
     <body>
-        <h1 id="results_title"></h1>
-        <div id="result"></div>
+        <h1 id="results_title">...</h1>
+        <div id="result">...</div>
         <img id="image">
         <div id="desc"></div>
         <button id="indexbutton"></button>
