--- a/quiz.html
+++ b/quiz.html
@@ -18,7 +18,7 @@
         <meta name="theme-color" content="#222222" data-react-helmet="true">
     </head>
     <body>
-        <h1 id="quiz_title"></h1>
+        <h1 id="quiz_title">...</h1>
         <div id="question">Loading...</div>
         <div id="buttonholder"></div>
         <button id="back_button" onclick="prev_question()">
