--- a/tree.html
+++ b/tree.html
@@ -18,8 +18,8 @@
         <meta name="theme-color" content="#222222" data-react-helmet="true">
     </head>
     <body id="page_tree">
-        <h1 id="tree_title"></h1>
-        <p id="tree_info"></p>
+        <h1 id="tree_title">...</h1>
+        <p id="tree_info">...</p>
         <div id="tree">Loading...</div>
     </body>
     <script src="scripts/common.js" type="module"></script>
