Move to a new i18n architecture (#47)
* Prepare all pages to have a common initialization

* Start new i18n archtecture, migrating the index page.

issue #46

* Add loading animation

* Migrate i18n for pages "results" and "tree"

issue #46

* Migrate i18n for credits page.

issue #46

* Finish new i18n archtecture, migrating the quiz page.

issue #46

* Remove deprecated tools and add a new makelang.js tool.

close #46

* Add some load parallelization for a faster loading.

issue #46

* Less flashy loading animation

* Add fade-in to loading animation

--- a/results.html
+++ b/results.html
@@ -18,12 +18,12 @@
         <meta name="theme-color" content="#222222" data-react-helmet="true">
     </head>
     <body>
-        <h1 id="results_title"></h1>
-        <div id="result"></div>
+        <h1 id="results_title">...</h1>
+        <div id="result">...</div>
         <img id="image">
         <div id="desc"></div>
         <button id="indexbutton"></button>
         <button id="creditsbutton" onclick="location.href = 'credits.html';"></button>
     </body>
-    <script src="scripts/results.js"></script>
+    <script src="scripts/common.js" type="module"></script>
 </html>
