Added tree link to index, updated discord tag,fixed some typos and generalized large-button CSS

--- a/credits.html
+++ b/credits.html
@@ -20,7 +20,7 @@
     <body>
         <h1>Ideosorter - Credits</h1>
         <div id="credits_body"></div>
-        <button id="returnbutton" onclick="history.back();">Return</button>
+        <button id="returnbutton" class="large-button" onclick="history.back();">Return</button>
     </body>
     <script src="scripts/common.js" type="module"></script>
 </html>
