--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <noscript>This test requires JavaScript enabled to run.</noscript>
         <h1 id="title">...</h1>
         <div id="text_body">...</div>
-        <button id="startbutton"></button>
+        <button id="startbutton" class="large-button"></button>
+        <button id="treebutton" class="large-button"></button>
         <h2 id="contacts"></h2>
         <div id="contacts_info"></div>
     </body>
