--- a/results.html
+++ b/results.html
@@ -22,8 +22,8 @@
         <div id="result">...</div>
         <img id="image">
         <div id="desc"></div>
-        <button id="indexbutton"></button>
-        <button id="creditsbutton" onclick="location.href = 'credits.html';"></button>
+        <button id="indexbutton" class="large-button"></button>
+        <button id="creditsbutton" class="large-button" onclick="location.href = 'credits.html';"></button>
     </body>
     <script src="scripts/common.js" type="module"></script>
 </html>
